<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginBottom="5dp"
    android:id="@+id/cardCart">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:id="@+id/CartLinear">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="130dp"
            android:layout_height="110dp"
            android:foreground="@drawable/foreground"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/latte_coffee"

            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="-148dp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginLeft="4dp">

            <TextView
                android:id="@+id/detailed_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:padding="5sp"
                android:singleLine="true"
                android:text="@string/name"
                android:textSize="24sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginLeft="4dp">


                <TextView
                    android:id="@+id/Quantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:ellipsize="end"
                    android:maxLines="2"
                    android:padding="5sp"

                    android:singleLine="true"
                    android:text="@string/quantity"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingLeft="145dp"
                    android:text="@string/Total"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

</androidx.cardview.widget.CardView>