<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_sheet"
    android:background="@drawable/bottom_sheet_bg">

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Order Now"
        android:textColor="@color/purple_500"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <View
        android:id="@+id/view1"
        android:layout_width="90dp"
        android:layout_height="3dp"
        android:background="@color/purple_500"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/view1">

        <ImageView
            android:id="@+id/bottom_img"
            android:layout_width="130dp"
            android:layout_height="110dp"
            android:foreground="@drawable/foreground"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/latte_coffee"

            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="-148dp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginLeft="4dp">

            <TextView
                android:id="@+id/bottom_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:padding="5sp"
                android:singleLine="true"
                android:text="@string/name"
                android:textSize="24sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="4dp">



                <TextView
                    android:id="@+id/bottom_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:ellipsize="end"
                    android:maxLines="2"
                    android:padding="5sp"

                    android:singleLine="true"
                    android:text="@string/Total"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/add_to_cart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"


                    android:text="@string/AddToCart" />



            </LinearLayout>

        </LinearLayout>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>